# cherry

./: .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.circleci/: config.yml
compiler/ccherry/: Cargo.toml
compiler/ccherry-diagnostics/: Cargo.toml
compiler/ccherry-diagnostics/src/: lib.rs
compiler/ccherry-lexer/: Cargo.toml
compiler/ccherry-lexer/src/: lib.rs  token.rs
compiler/ccherry-lexer/tests/: test.rs
compiler/ccherry/src/: main.rs
design/: alloc.md
